# predicate-checker

./: Cargo.toml  README.md  predicate_rules.md
src/: domain.rs  lib.rs  main.rs  parser.rs  predicate.rs
src/simplification/: and.rs  mod.rs  not.rs
tests/: main.rs  simplify.rs
