[package]
name = "predicatechecker"
description = "Check that a predicate is true if another is"
version = "0.5.1"
edition = "2021"
authors = ["MyselfLeo <myselfleo@outlook.fr>"]
readme = "README.md"
repository = "https://github.com/MyselfLeo/predicate-checker"
license = "MPL-2.0"
keywords = ["logic"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"